--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,4 @@ spring:
     hibernate:
       ddl-auto: create-drop
     open-in-view: false
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
