--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,6 @@ spring:
   #  generate-ddl: true
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update # create-drop -- drop after every restart
     open-in-view: false
     database-platform: org.hibernate.dialect.PostgreSQLDialect
