--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,8 @@ spring:
       client:
         registration:
           google:
-            clientId: 827397972494-svv1rrkfo272qd0tofng97nogjoauddt.apps.googleusercontent.com
-            clientSecret: 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
+            clientId: clientId
+            clientSecret: secret
             scope:
               - email
               - profile
