--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,8 @@ spring:
       client:
         registration:
           google:
-            clientId: clientId
-            clientSecret: secret
+            clientId: ${OAUTH2_CLIENT_ID:""}
+            clientSecret: ${OAUTH2_CLIENT_SECRET:""}
             scope:
               - email
               - profile
